﻿0.9
Additions:
- Added basic mission-only 0.9 integration

Changes:
- Now uses and requires MagicLib; all old code which is included in MagicLib has been refactored and many old scripts have been removed

0.8.3 [Never released]
Additions:
- Sylphon fleets in the campaign now has a chance to upgrade their ships with Sylph Cores, if the submarket is available in their market
- Added a new line of hullmods for Sylph Cores; they can only be used on ships with a mounted Sylph Core:
	-- Advisor Subroutines: Provides tactical advice to the commander, increasing command point regeneration as long as the flagship also has this mod
- Added new visual steam effects on the Stricture and Condemnation
- Added oscillation visuals to the Vacuity and Disavowal PD

Changes:
- Adjusted the code for how Sylph Core installations are tracked; slightly better performance for new ships that install Sylph Cores (shouldn't be noticable below a couple of thousand ships, though, so it's no biggie)
- Split up the code for oscillating beams into separate scripts instead of using a single script for them all

Balancing:
- Lowered Largesse range from 900 to 800
- Sylphon Prototype Nullpoint Shield:
	-- Now increases shield upkeep by 75%
	-- Now halves shield arc for any ships who already have frontal shields
	-- Shield damage reduction from 45% to 50% (this is to offset a bug-fix which acted as a nerf)

Bugfixes:
- Fixed a crash error with the Seresvalla when it couldn't find any targets to shoot lightning at with its shipsystem
- Fixed a potential memory leak causing trail-spawning projectiles to be kept in memory after fading.


0.8.2b
Bugfixes:
- Fixed crashy stuff again cause Nicke doesn't know what ! means


0.8.2a
Bufixes:
- Fixed crashy stuff


0.8.2
Changes:
-Updated description for Selene with info on functionality

Balancing:
-Buffed Finis Astra's mobility stats across the board to make the giant deathray a bit less tedious to move around. Still can't hit moving targets.